--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "3.1.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "styled-components": "^3.4.9"
   },
   "scripts": {
     "start": "react-scripts-ts start",
