render logic for nav drawer done

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@atlaskit/icon": "^14.0.0",
     "@atlaskit/layer-manager": "^5.0.13",
     "@atlaskit/navigation": "^33.2.0",
+    "@atlaskit/tooltip": "^12.1.2",
     "@types/react-redux": "^6.0.9",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
