--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlaskit/checkbox": "^5.0.3",
     "@atlaskit/dynamic-table": "^10.0.13",
     "@atlaskit/icon": "^14.0.0",
     "@atlaskit/layer-manager": "^5.0.13",
