--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@atlaskit/checkbox": "^5.0.3",
     "@atlaskit/dynamic-table": "^10.0.13",
+    "@atlaskit/empty-state": "^3.0.9",
     "@atlaskit/icon": "^14.0.0",
     "@atlaskit/layer-manager": "^5.0.13",
     "@atlaskit/navigation": "^33.2.0",
