--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlaskit/button": "^9.0.13",
     "@atlaskit/checkbox": "^5.0.3",
+    "@atlaskit/dropdown-menu": "^6.1.17",
     "@atlaskit/dynamic-table": "^10.0.13",
     "@atlaskit/empty-state": "^3.0.9",
+    "@atlaskit/field-text": "^7.0.11",
     "@atlaskit/icon": "^14.0.0",
     "@atlaskit/layer-manager": "^5.0.13",
     "@atlaskit/modal-dialog": "^7.0.2",
