--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@atlaskit/dynamic-table": "^10.0.13",
     "@atlaskit/empty-state": "^3.0.9",
     "@atlaskit/field-text": "^7.0.11",
+    "@atlaskit/flag": "^9.0.13",
     "@atlaskit/icon": "^14.0.0",
     "@atlaskit/layer-manager": "^5.0.13",
     "@atlaskit/modal-dialog": "^7.0.2",
     "@atlaskit/navigation": "^33.2.0",
     "@atlaskit/page": "^8.0.5",
+    "@atlaskit/theme": "^6.1.0",
     "@atlaskit/tooltip": "^12.1.2",
     "@types/react-redux": "^6.0.9",
     "react": "^16.5.2",
